# OrbitX

./: .gitignore  .prettierignore  API标准化规范手册.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  OrbitX_PPT_Outline.md  README.md  README_zh.md  eko-core-refactor-task-list.md  eslint.config.js  index.html  package-lock.json  package.json  test-close-save.md  vite.config.ts
src-tauri/: .clippy.toml  .rustfmt.toml  ARCHITECTURE.md  Cargo.toml  README.md  tauri.conf.json  test_write.txt
src-tauri/capabilities/: default.json
src-tauri/examples/: storage_coordinator_demo.rs
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_initial_schema.sql
src-tauri/prompts/agents/: coder.md  explore.md  general.md  plan.md  research.md
src-tauri/prompts/base/: methodology.md  role.md  rules.md
src-tauri/prompts/reminders/: coder_with_plan.md  duplicate_tools.md  loop_warning.md  no_workspace.md  plan_mode.md
src-tauri/prompts/system/: compaction.md  compaction_user.md  conversation_summary.md  env.md  subtask_summary_user.md
src-tauri/scripts/: generate_coverage.sh  test_coverage_simple.sh
src-tauri/sql/: 01_tables.sql  02_indexes.sql  03_triggers.sql  04_fts.sql  05_tasks.sql  06_agent_backend.sql  07_agent_migration.sql
src-tauri/src/: lib.rs  main.rs
src-tauri/src/agent/: error.rs  mod.rs  tokenizer.rs
src-tauri/src/agent/agents/: config.rs  frontmatter.rs  loader.rs  mod.rs
src-tauri/src/agent/command_system/: loader.rs  types.rs
src-tauri/src/agent/common/: llm_text.rs  mod.rs  xml.rs
src-tauri/src/agent/compaction/: compactor.rs  config.rs  loader.rs  mod.rs  pruner.rs  result.rs  service.rs
src-tauri/src/agent/config/: agent.rs  (+5 more)
src-tauri/src/ai/: adapter_manager.rs  cache.rs  client.rs  command_processor.rs  commands.rs  config.rs  context.rs  context_manager.rs  enhanced_context.rs  enhanced_context_tests.rs  error.rs  mod.rs  prompt_engine.rs  service.rs  types.rs
src-tauri/src/checkpoint/: blob_store.rs  commands.rs  config.rs  mod.rs  models.rs  service.rs  storage.rs
src-tauri/src/ck/: commands.rs
src-tauri/src/code_intel/: mod.rs  tree_sitter.rs  tree_sitter_diagnostics.rs
src-tauri/src/commands/: mod.rs  mux_terminal.rs
src-tauri/src/completion/: cache.rs  command_line.rs  commands.rs  context_analyzer.rs  context_collector.rs  engine.rs  error.rs  mod.rs  output_analyzer.rs  runtime.rs  smart_extractor.rs  smart_provider.rs  types.rs
src-tauri/src/config/: cache.rs  commands.rs  css_parser.rs  defaults.rs  error.rs  manager.rs  mod.rs  parser.rs  paths.rs  terminal_commands.rs  theme.rs  theme_commands.rs  theme_service.rs  toml_manager.rs  types.rs  validator.rs
src-tauri/src/dock/: commands.rs  mod.rs  state.rs
src-tauri/src/events/: context.rs  mux.rs  shell.rs
src-tauri/src/file_watcher/: events.rs  watcher.rs
src-tauri/src/filesystem/: commands.rs
src-tauri/src/git/: commands.rs  mod.rs  service.rs  types.rs  watcher.rs
src-tauri/src/llm/: anthropic_types.rs  commands.rs  error.rs  integration_tests.rs  mod.rs  preset_models.rs  provider_registry.rs  registry.rs  service.rs  tests.rs  tests_old.rs  types.rs
src-tauri/src/menu/: handler.rs  mod.rs
src-tauri/src/mux/: batch_processor.rs  config.rs  error.rs  io_handler.rs  io_thread_pool.rs  mod.rs  pane.rs  performance_monitor.rs  shell_manager.rs  singleton.rs  tauri_integration.rs  terminal_mux.rs  types.rs
src-tauri/src/node/: commands.rs  detector.rs  mod.rs  types.rs
src-tauri/src/settings/: commands.rs  error.rs  manager.rs  mod.rs  types.rs
src-tauri/src/setup/: error.rs  mod.rs
src-tauri/src/shell/: README.md  commands.rs  integration.rs  integration_test.rs  mod.rs  osc_parser.rs  script_generator.rs
src-tauri/src/storage/: README.md  cache.rs  commands.rs  coordinator.rs  database.rs  error.rs  filesystem.rs  messagepack.rs  mod.rs  paths.rs  query.rs  recovery.rs  sql_scripts.rs  sqlite.rs  sqlite_tests.rs  toml_config.rs  types.rs  workspace_index_service.rs
src-tauri/src/terminal/: channel_manager.rs  channel_state.rs  commands.rs  context_registry.rs  context_service.rs  error.rs  event_handler.rs  integration_test.rs  mod.rs  replay.rs  scrollback.rs  types.rs
src-tauri/src/utils/: api_response.rs  error.rs  error_handler.rs  i18n.rs  language.rs  language_commands.rs  logging.rs  migration.rs  mod.rs
src-tauri/src/vector_db/: mod.rs
src-tauri/src/vector_index/: config_service.rs  enhanced_config.rs  error_handler.rs  incremental_updater.rs  mod.rs  performance_monitor.rs  service.rs  startup.rs  tests.rs  types.rs
src-tauri/src/window/: commands.rs  mod.rs
src-tauri/src/workspace/: commands.rs  mod.rs  rules.rs  service.rs  types.rs
src-tauri/tests/: cache_standalone_test.rs  concurrent_state_tests.rs  enhanced_context_tests.rs  filesystem_commands_test.rs  storage_repository_tests.rs  terminal_commands_integration.rs  terminal_error_scenarios_test.rs  vector_index_tests.rs
src-tauri/tests/ai/: adapters_tests.rs  cache_manager_tests.rs  command_processor_tests.rs  commands_tests.rs  config_tests.rs  context_manager_tests.rs  integration_tests.rs  mock_adapters.rs  mod.rs  prompt_engine_tests.rs  test_data.rs  test_utils.rs  types_tests.rs
src-tauri/tests/completion/: completion_cache_tests.rs  completion_commands_tests.rs  completion_engine_tests.rs  providers_integration_tests.rs  system_commands_provider_tests.rs
src-tauri/tests/integration/: integration_test.rs  performance_test.rs
src-tauri/tests/mux/: error_handling_tests.rs  io_integration_test.rs  io_optimization_test.rs  lifecycle_integration_test.rs  mux_integration_test.rs  pty_io_tests.rs
src-tauri/tests/storage/: coordinator_integration_test.rs  messagepack_tests.rs
src-tauri/tests/test_utils/: assertions.rs  builders.rs  fixtures.rs  helpers.rs  mod.rs
src-tauri/tests/unit/: concurrent_state_tests.rs  context_service_test.rs  mux_core_tests.rs  mux_unit_tests.rs  theme_tests.rs  window_commands_test.rs
src-tauri/tests/vector_index/: file_monitor_tests.rs  integration_tests.rs  mod.rs  qdrant_tests.rs  search_tests.rs  search_unit_tests.rs  test_fixtures.rs
(+959 files in other folders)
